--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: Documentation
+title: DEC Documentation
 description: Decentralized Ecosystem Cooperation
 show_downloads: false
 logo: Logo.png
